{
    "name": "InputActions",
    "maps": [
        {
            "name": "Touch",
            "id": "7468d883-6ba8-4f29-93ce-09429fc5c202",
            "actions": [
                {
                    "name": "Touch",
                    "type": "Button",
                    "id": "209b92b6-9659-4c84-afe7-7b865b7694de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ac716c45-ce5a-432f-b36f-5a586c87cd7b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}